--- a/configs/dataset/custom_detection.yml
+++ b/configs/dataset/custom_detection.yml
@@ -4,15 +4,15 @@ evaluator:
   type: CocoEvaluator
   iou_types: ['bbox', ]
 
-num_classes: 777 # your dataset classes
+num_classes: 12  # PPE dataset has 12 classes
 remap_mscoco_category: False
 
 train_dataloader:
   type: DataLoader
   dataset:
     type: CocoDetection
-    img_folder: /data/yourdataset/train
-    ann_file: /data/yourdataset/train/train.json
+    img_folder: _data/ppe-rig-dataset/images/train
+    ann_file: _data/ppe-rig-dataset/annotations/instances_train.json
     return_masks: False
     transforms:
       type: Compose
@@ -23,13 +23,12 @@ train_dataloader:
   collate_fn:
     type: BatchImageCollateFunction
 
-
 val_dataloader:
   type: DataLoader
   dataset:
     type: CocoDetection
-    img_folder: /data/yourdataset/val
-    ann_file: /data/yourdataset/val/val.json
+    img_folder: _data/ppe-rig-dataset/images/val
+    ann_file: _data/ppe-rig-dataset/annotations/instances_val.json
     return_masks: False
     transforms:
       type: Compose
