--- a/configs/deim_dfine/dfine_hgnetv2_n_coco.yml
+++ b/configs/deim_dfine/dfine_hgnetv2_n_coco.yml
@@ -1,5 +1,5 @@
 __include__: [
-  '../dataset/coco_detection.yml',
+  '../dataset/custom_detection.yml',
   '../runtime.yml',
   '../base/dataloader.yml',
   '../base/optimizer.yml',
@@ -68,7 +68,7 @@ optimizer:
 # Increase to search for the optimal ema
 epoches: 160 # 148 + 4n
 train_dataloader:
-  total_batch_size: 128
+  total_batch_size: 16
   dataset:
     transforms:
       policy:
@@ -79,4 +79,4 @@ train_dataloader:
     base_size_repeat: ~
 
 val_dataloader:
-  total_batch_size: 256
+  total_batch_size: 16
